--- a/debian/control
+++ b/debian/control
@@ -1,1 +1,28 @@
- 
+Source: netatop
+Maintainer: Peter J. Mello <admin@petermello.net>
+Section: kernel
+Priority: optional
+Build-Depends: debhelper-compat (= 12), dh-modaliases, dkms,
+ zlib1-dev | zlib1g-dev 
+Standards-Version: 4.3.0
+Homepage: https://www.atoptool.nl/netatop.php
+Vcs-Browser: https://github.com/Atoptool/atop
+Vcs-Git: https://github.com/Atoptool/atop.git
+Rules-Requires-Root: no
+
+Package: netatop-dkms
+Architecture: all
+Essential: no
+Depends: atop (>= 2.3.0), dkms, ${misc:Depends}
+Description: Atop network monitoring kernel module
+ netatop is a module for Linux kernel versions 4.13 and up that can be loaded to
+ gather statistics about the TCP and UDP packets that have been
+ transmitted/received per process and per thread, accessible through the
+ application, `atop`.
+ .
+ As soon as atop discovers that this module is active, it shows the columns
+ SNET and RNET in the generic screen for the number of transmitted and received
+ packets per process. When the 'n' key is pressed, it shows detailed counters
+ about the number of packets sent/received via TCP and UDP, the average sizes of
+ these packets, and the total bandwidth consumed for input and output per
+ process/thread.
