--- a/debian/control
+++ b/debian/control
@@ -2,8 +2,9 @@ Source: netatop
 Maintainer: Peter J. Mello <admin@petermello.net>
 Section: kernel
 Priority: optional
-Build-Depends: debhelper-compat (= 12), dh-modaliases, dkms
-Build-Depends-Indep: zlib1-dev | zlib1g-dev
+Build-Depends: bzip2, debhelper-compat (= 12), dh-exec, dh-modaliases,
+ dkms (>= 2.1.0.0)
+Build-Depends-Indep: zlib1g-dev
 Standards-Version: 4.3.0
 Homepage: https://www.atoptool.nl/netatop.php
 Vcs-Browser: https://github.com/Atoptool/atop
@@ -11,10 +12,10 @@ Vcs-Git: https://github.com/Atoptool/atop.git
 Rules-Requires-Root: no
 
 Package: netatop-dkms
-Architecture: linux-any
+Architecture: all
 Multi-Arch: foreign
-Essential: no
-Depends: atop (>= 2.3.0), dkms, linux-headers, make, ${misc:Depends}
+Depends: atop (>= 2.3.0), dkms (>= 2.1.0.0), dpkg-dev (>= 1.16.1), libc6-dev,
+ linux-headers | linux-headers-generic, ${misc:Depends}
 Description: Atop network monitoring kernel module (DKMS)
  netatop is a module for Linux kernel versions 4.13 and up that can be loaded to
  gather statistics about the TCP and UDP packets that have been
