--- a/src/dkms.conf.in
+++ b/src/dkms.conf.in
@@ -1,5 +1,5 @@
 PACKAGE_NAME="netatop"
-PACKAGE_VERSION="#PACKAGE_VERSION#"
+PACKAGE_VERSION="@@PACKAGE_VERSION@@"
 
 MAKE[0]="'make' -C ${kernel_source_dir} M=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build"
 CLEAN="'make' -C ${kernel_source_dir} M=${dkms_tree}/${PACKAGE_NAME}/${PACKAGE_VERSION}/build clean"
